<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/app_name"
        android:textColor="#151414"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Github"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/copyright"
        android:textSize="12sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/Developers"
        android:layout_width="82dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/developers"
        android:textColor="#151414" />

    <TextView
        android:id="@+id/Names"
        android:layout_width="331dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/Developers"
        android:layout_alignParentEnd="false"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="71dp"
        android:text="@string/developers_detail" />

    <TextView
        android:id="@+id/Github"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Names"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/GithubLink" />

</RelativeLayout>